--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,180 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+}
+
+.container {
+  background-image: url(./Backgroung.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.app-wrapper {
+  background-color: #999;
+  width: 500px;
+  height: 600px;
+  padding: 30px;
+  box-sizing: border-box;
+  border-radius: 5px;
+}
+
+.header h1 {
+  font-weight: 300;
   text-align: center;
+  margin: 20px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.form {
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  margin-bottom: 10px;
 }
 
-.App-link {
-  color: #61dafb;
+.ul {
+  width: 90%;
+  margin: auto;
+  height: 300px;
+  overflow: hidden;
+  overflow-y: auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 10px;
+  background-color: #aaa;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #444;
+  border-radius: 10px;
+}
+
+.pending {
+  background-color: #ffffff;
+  height: 140px;
+  margin: 10px;
+}
+
+.list-item {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 20px;
+}
+
+.list-item span {
+  color: rgb(0, 0, 0);
+}
+
+.no-tasks-pending {
+  padding-top: 60px;
+  text-align: center;
+  font-size: large;
+}
+
+.completed {
+  background-color: #ffffff;
+  height: 140px;
+  margin: 10px;
+}
+
+.no-tasks-completed {
+  padding-top: 60px;
+  text-align: center;
+  font-size: large;
+}
+
+.title-input {
+  margin: 5px;
+  width: 350px;
+  min-width: 250px;
+  padding: 15px 10px 10px 20px;
+  margin-right: 10px;
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+  border: 1px solid #444;
+  outline: none;
+  border-radius: 20px;
+}
+
+.date-input {
+  margin: 5px;
+  width: 150px;
+  padding: 15px;
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+  border: 1px solid #444;
+  border-radius: 20px;
+}
+
+.time-input {
+  margin: 5px;
+  width: 150px;
+  padding: 15px;
+  font-size: 15px;
+  color: rgb(0, 0, 0);
+  border: 1px solid #444;
+  border-radius: 20px;
+}
+
+.btn {
+  margin: 10px 15px;
+}
+
+.task-btn {
+  cursor: pointer;
+  background-color: transparent;
+  border: none;
+  outline: none;
+}
+
+.btn-complete i {
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  margin-right: 10px;
+}
+
+.btn-delete i {
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  margin-right: 10px;
+}
+
+.btn-edit i {
+  font-size: 16px;
+  color: rgb(0, 0, 0);
+  margin-right: 10px;
+}
+
+.clear-btn {
+  width: 150px;
+  height: 35px;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  border-radius: 20px;
+  cursor: pointer;
+}
+
+.add-task-btn {
+  width: 150px;
+  height: 35px;
+  background-color: #000000;
+  color: rgb(255, 255, 255);
+  font-size: 14px;
+  border-radius: 20px;
+  cursor: pointer;
 }
