--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 }
 
 .container {
-  background-image: url(./Backgroung.jpg);
+  background-image: url(./Background.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -117,6 +117,7 @@
   font-size: 15px;
   color: rgb(0, 0, 0);
   border: 1px solid #444;
+  outline: none;
   border-radius: 20px;
 }
 
@@ -127,6 +128,7 @@
   font-size: 15px;
   color: rgb(0, 0, 0);
   border: 1px solid #444;
+  outline: none;
   border-radius: 20px;
 }
 
